AI-2791 [PublicAPI] changes for get/upload company logo